[tool.poetry]
name = "gflow-personal"
version = "0.1.0"
description = ""
authors = ["adriandelser <adrian.delser@gmail.com>"]
readme = "README.md"
packages= [
    {include = "gflow-personal"},
    ]
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
pytest = "^7.3.1"
pytest-xdist = "^3.3.1"
pre-commit = "^3.3.2"
matplotlib = "^3.7.1"
mpl-interactions = "^0.23.0"
pyclipper = "^1.3.0.post4"
scipy = "^1.10.1"
shapely = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
