[tool.poetry]
name = "pgflow"
version = "0.3.1"
description = "Artificial potential field based guidance algorithm for multi agent systems"
authors = [
    {author = "Zeynep Bilgin", email = "zeynep.bilgin@tum.de"},
    {author = "Murat Bronz", email = "muratbronz@gmail.com"},
   ]
maintainer = ["adriandelser <adrian.delser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pyclipper = "^1.3.0.post4"
scipy = "^1.10.1"
shapely = "^2.0.1"
rtree = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pgflow = "pgflow.main:main"
